--- a/pkg/providers/vsphere/testdata/expected_results_minimal_oidc_cp.yaml
+++ b/pkg/providers/vsphere/testdata/expected_results_minimal_oidc_cp.yaml
@@ -376,19 +376,19 @@ spec:
       cluster.x-k8s.io/cluster-name: test
   resources:
   - kind: Secret
-    name: vsphere-csi-controller
+    name: test-vsphere-csi-controller
   - kind: ConfigMap
-    name: vsphere-csi-controller-role
+    name: test-vsphere-csi-controller-role
   - kind: ConfigMap
-    name: vsphere-csi-controller-binding
+    name: test-vsphere-csi-controller-binding
   - kind: Secret
-    name: csi-vsphere-config
+    name: test-csi-vsphere-config
   - kind: ConfigMap
-    name: csi.vsphere.vmware.com
+    name: test-csi.vsphere.vmware.com
   - kind: ConfigMap
-    name: vsphere-csi-node
+    name: test-vsphere-csi-node
   - kind: ConfigMap
-    name: vsphere-csi-controller
+    name: test-vsphere-csi-controller
 ---
 apiVersion: addons.cluster.x-k8s.io/v1beta1
 kind: ClusterResourceSet
@@ -404,11 +404,11 @@ spec:
       cluster.x-k8s.io/cluster-name: test
   resources:
   - kind: Secret
-    name: cloud-controller-manager
+    name: test-cloud-controller-manager
   - kind: Secret
-    name: cloud-provider-vsphere-credentials
+    name: test-cloud-provider-vsphere-credentials
   - kind: ConfigMap
-    name: cpi-manifests
+    name: test-cpi-manifests
 ---
 apiVersion: v1
 kind: Secret
@@ -424,7 +424,7 @@ stringData:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: vsphere-csi-controller
+  name: test-vsphere-csi-controller
   namespace: eksa-system
 stringData:
   data: |
@@ -438,7 +438,7 @@ type: addons.cluster.x-k8s.io/resource-set
 apiVersion: v1
 kind: Secret
 metadata:
-  name: csi-vsphere-config
+  name: test-csi-vsphere-config
   namespace: eksa-system
 stringData:
   data: |
@@ -573,7 +573,7 @@ data:
       - list
 kind: ConfigMap
 metadata:
-  name: vsphere-csi-controller-role
+  name: test-vsphere-csi-controller-role
   namespace: eksa-system
 ---
 apiVersion: v1
@@ -593,7 +593,7 @@ data:
       namespace: kube-system
 kind: ConfigMap
 metadata:
-  name: vsphere-csi-controller-binding
+  name: test-vsphere-csi-controller-binding
   namespace: eksa-system
 ---
 apiVersion: v1
@@ -607,7 +607,7 @@ data:
       attachRequired: true
 kind: ConfigMap
 metadata:
-  name: csi.vsphere.vmware.com
+  name: test-csi.vsphere.vmware.com
   namespace: eksa-system
 ---
 apiVersion: v1
@@ -740,7 +740,7 @@ data:
         type: RollingUpdate
 kind: ConfigMap
 metadata:
-  name: vsphere-csi-node
+  name: test-vsphere-csi-node
   namespace: eksa-system
 ---
 apiVersion: v1
@@ -865,7 +865,7 @@ data:
             name: socket-dir
 kind: ConfigMap
 metadata:
-  name: vsphere-csi-controller
+  name: test-vsphere-csi-controller
   namespace: eksa-system
 ---
 apiVersion: v1
@@ -880,13 +880,13 @@ data:
       namespace: kube-system
 kind: ConfigMap
 metadata:
-  name: internal-feature-states.csi.vsphere.vmware.com
+  name: test-internal-feature-states.csi.vsphere.vmware.com
   namespace: eksa-system
 ---
 apiVersion: v1
 kind: Secret
 metadata:
-  name: cloud-controller-manager
+  name: test-cloud-controller-manager
   namespace: eksa-system
 stringData:
   data: |
@@ -900,7 +900,7 @@ type: addons.cluster.x-k8s.io/resource-set
 apiVersion: v1
 kind: Secret
 metadata:
-  name: cloud-provider-vsphere-credentials
+  name: test-cloud-provider-vsphere-credentials
   namespace: eksa-system
 stringData:
   data: |
@@ -1118,5 +1118,5 @@ data:
         type: RollingUpdate
 kind: ConfigMap
 metadata:
-  name: cpi-manifests
+  name: test-cpi-manifests
   namespace: eksa-system
