--- a/pkg/providers/nutanix/config/cp-template.yaml
+++ b/pkg/providers/nutanix/config/cp-template.yaml
@@ -177,11 +177,26 @@ spec:
       memorySize: {{.memorySize}}
       systemDiskSize: {{.systemDiskSize}}
       image:
+{{- if (eq .imageIDType "name") }}
         type: name
         name: "{{.imageName}}"
+{{ else if (eq .imageIDType "uuid") }}
+        type: uuid
+        uuid: "{{.imageUUID}}"
+{{ end }}
       cluster:
+{{- if (eq .nutanixPEClusterIDType "name") }}
         type: name
         name: "{{.nutanixPEClusterName}}"
+{{- else if (eq .nutanixPEClusterIDType "uuid") }}
+        type: uuid
+        uuid: "{{.nutanixPEClusterUUID}}"
+{{ end }}
       subnet:
+{{- if (eq .subnetIDType "name") }}
         - type: name
           name: "{{.subnetName}}"
+{{- else if (eq .subnetIDType "uuid") }}
+        - type: uuid
+          uuid: "{{.subnetUUID}}"
+{{ end }}
