--- a/pkg/providers/nutanix/config/md-template.yaml
+++ b/pkg/providers/nutanix/config/md-template.yaml
@@ -5,6 +5,11 @@ metadata:
     cluster.x-k8s.io/cluster-name: "{{.clusterName}}"
   name: "{{.workerNodeGroupName}}"
   namespace: "{{.eksaSystemNamespace}}"
+  {{- if .autoscalingConfig }}
+  annotations:
+    cluster.x-k8s.io/cluster-api-autoscaler-node-group-min-size: "{{ .autoscalingConfig.MinCount }}"
+    cluster.x-k8s.io/cluster-api-autoscaler-node-group-max-size: "{{ .autoscalingConfig.MaxCount }}"
+  {{- end }}
 spec:
   clusterName: "{{.clusterName}}"
   replicas: {{.workerReplicas}}
