--- a/codecov.yml
+++ b/codecov.yml
@@ -13,6 +13,7 @@ ignore:
   - internal/test/e2e
   - internal/pkg/api
   - internal/test/envtest
+  - internal/pkg/api
   - "**/zz_generated.deepcopy.go"
   - "test/framework" 
   - "internal/aws-sdk-go-v2"
