--- a/pkg/providers/nutanix/config/cp-template.yaml
+++ b/pkg/providers/nutanix/config/cp-template.yaml
@@ -1,11 +1,3 @@
-apiVersion: v1
-binaryData:
-  ca.crt: {{.nutanixAdditionalTrustBundle}}
-kind: ConfigMap
-metadata:
-  name: user-ca-bundle
-  namespace: "{{.eksaSystemNamespace}}"
----
 apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
 kind: NutanixCluster
 metadata:
@@ -13,9 +5,12 @@ metadata:
   namespace: "{{.eksaSystemNamespace}}"
 spec:
   prismCentral:
+{{- if .nutanixAdditionalTrustBundle }}
     additionalTrustBundle:
-      kind: ConfigMap
-      name: user-ca-bundle
+      kind: String
+      data: |
+{{ .nutanixAdditionalTrustBundle | indent 8 }}
+{{- end }}
     address: "{{.nutanixEndpoint}}"
     port: {{.nutanixPort}}
     insecure: {{.nutanixInsecure}}
