--- a/test/framework/testdata/autoscaler_package.yaml
+++ b/test/framework/testdata/autoscaler_package.yaml
@@ -4,11 +4,11 @@ metadata:
   name: cluster-autoscaler
 spec:
   packageName: cluster-autoscaler
-  targetNamespace: eksa-packages
+  targetNamespace: {{.targetNamespace}}
   config: |-
     cloudProvider: "clusterapi"
     autoDiscovery:
-      clusterName: ""
+      clusterName: {{.clusterName}}
     extraArgs:
       scale-down-delay-after-add: 2m
       scale-down-delay-after-failure: 3m
