--- a/test/framework/testdata/metrics_server_package.yaml
+++ b/test/framework/testdata/metrics_server_package.yaml
@@ -4,7 +4,7 @@ metadata:
   name: metrics-server
 spec:
   packageName: metrics-server
-  targetNamespace: eksa-packages
+  targetNamespace: {{.targetNamespace}}
   config: |-
     args:
       - "--kubelet-insecure-tls"
